# E7020E

./: LICENSE  README.md
lab1/: LM1117ADJ.lib  fp-info-cache  lab1-B_Cu.gbr  lab1-B_Mask.gbr  lab1-Edge_Cuts.gbr  lab1-F_Cu.gbr  lab1-F_Mask.gbr  lab1-NPTH.drl  lab1-PTH.drl  lab1-cache.lib  lab1.csv  lab1.kicad_pcb-bak  lab1.net  lab1.pro  lab1.sch  lab1.sch-bak
project/: Cargo.toml  README.md
project/.cargo/: config
project/card/project/: _autosave-project.sch  fp-info-cache  project  project-B_Cu.gbr  project-B_Mask.gbr  project-B_SilkS.gbr  project-Edge_Cuts.gbr  project-F_Cu.gbr  project-F_Mask.gbr  project-F_SilkS.gbr  project-NPTH.drl  project-PTH.drl  project-cache.lib  project.csv  project.kicad_pcb  project.kicad_pcb-bak  project.net  project.pro  project.sch  project.sch-bak  project.xml
project/card/project/!Y/: project-B_Cu.gbr  project-B_Mask.gbr  project-Edge_Cuts.gbr  project-F_Cu.gbr  project-F_Mask.gbr  project-F_SilkS.gbr
project/card/project/test.pretty/: CMWX1ZZABZ.kicad_mod  Potetio.kicad_mod
project/examples/: tv.rs
project/src/: main.rs
