[package]
name = "project"
version = "0.1.0"
authors = ["97gushan <97gustavh@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
cortex-m-rtfm = "0.5.1"
cortex-m = "0.6.2"
embedded-hal = "0.2.3"
panic-semihosting = "0.5.3"
cortex-m-rt = "0.6.12"
cortex-m-semihosting = "0.3.5"
stm32l0xx-hal = { version = "0.5.0", features = ["stm32l0x2", "rt"] }
nb = "0.1.2"
cobs = { version = "0.1.4", default-features = false }
crc16 = "0.4.0"
heapless = "0.5.1"
postcard = "0.4.2"

[dependencies.ssd1306]
version = "=0.3.0-alpha.4"
features = [ "graphics" ]

[dependencies.embedded-graphics]
version = "=0.6.0-alpha.3"

[profile.dev]
# The UART RX seems to be too slow on `-O0`, so messages never get through.
opt-level = 1

[profile.release]
debug = true
